# verification_using_gamma_spectrometry

./: .gitignore  CMakeLists.txt  TODO.txt  background_activities.json  beautify.C  core_abundances.json  core_activities.json  decay_products.py  geometry_variables.json  plot.py  radiationCase_activities.json  rd.py  shield_abundances.json  shield_activities.json  sim.cc  total_activity.py
data_histograms/histogram_plots_1ms_radcase/: output0.root
data_histograms/histogram_plots_1ms_tamper/: geometry.txt
data_histograms/histogram_plots_Co60/: Setup.txt
data_histograms/histogram_plots_U235_10kDecays_LowAttenuation/: output0.root
data_histograms/histogram_plots_U235_single/: Setup.txt
include/: DecayHelper.hh  KillerStackingAction.hh  MyPrimaryGeneratorAction.hh  PMActionInitialization.hh  PMDetectorConstruction.hh  PMPhysicsList.hh  PMRunAction.hh  PMSensitiveDetector.hh  json.hpp:Zone.Identifier
macros/: GPS.mac  run.mac  vis.mac
plot_codes/: Be_attenuation.txt  PlotU235.py  Plotpa234m.py  U_attenuation.txt  merge_metadata.py  plot_DUcoreVsCore.py  plot_ROC.py  plot_ROC_HEU_DU_Core.py  plot_attenuation.py  plot_attenuation_coeff.py  plot_core_noCore_hist.py  plot_detection_hist.py  plot_emission.py  plot_emission_hist.py
root-files/: Co60_vacuum.root  Cs137_detMat.root  Cs137_vacuum.root  Gamma_100keV_vaccuum.root
run/: decay_products.py  run.mac  run.py  run_DUcore_1001.py  run_DUcore_185.py  run_copy.py  run_core_1001.py  run_core_185.py  run_minimal.mac  run_minimal.py  sim  total_activity.py
run/data/: background_activities.json  core_activities.json  geometry_variables.json  metadata.json  metadata_DUcore.json  metadata_nothickness.json  metadata_temp.json  output0.root
run/data/temp/: metadata_03192145-5389-4b65-9840-f57e3f129bfd.json  metadata_060edb59-13f8-4ee5-9fc8-ff31350af831.json  metadata_063d0c5d-fac9-4da5-bf1f-dae106b0f6fa.json  metadata_06eb31dc-754d-4847-949d-909aeadbe08d.json  metadata_09ede90e-8927-4535-b00b-62c40dbe7764.json  metadata_09f64d93-40a1-4df5-8d66-7763314afe6a.json  metadata_0a85ef4e-14ed-43b8-8566-7d8d5c1ef1d0.json  (+86 more)
src/: MyPrimaryGeneratorAction.cc  PMActionInitialization.cc  PMDetectorConstruction.cc  PMPhyscsList.cc  PMRunAction.cc  PMSensitiveDetector.cc
(+2 files in other folders)
